	* Yahoo ignore support (Jesse Farmer (farmerje))
	* Yahoo idle times displayed, long buddy lists work, sms users,
	  and other improvements (Tim Ringenbach)
	* The accounts window now shows offline accounts as greyed out, and
	  online accounts as colored.
	* Fixed the text replacement plugin.
	* Added SSL support, compatible with GNUTLS and Mozilla NSS.
	* Added support for gettext 0.12.x.
	* The right-click menu for conversation tabs now shows the tab icon
	  and status, if tab icons are enabled. (Jesse Farmer)
	* Korean translation updated (Kyung-uk Son)
	* Portuguese (Portugal) added (Duarte Henriques)
	* Swedish translation updated (Tore Lundqvist (luntor))

version 0.68 (09/01/2003):
	* Removed the old event system and replaced it with a much better
	  signal system.
	* Added plugin dependency support.
	* Rewrote the Perl plugin. All old scripts will break, but it offers
	  a much better API for new scripts.
	* Yahoo color support (Tim Ringenbach (marv_sf))
	* Yahoo and MSN get info support (Nathan Poznick)
	* Fixed Jabber registrations.
	* Fixed a problem where pouncing two users with the same name
	  appeared in the same conversation window, and other related
	  problems. (Robot101)
	* Corrected problems with proxy preferences.
	* Mailchk.c and simple.c compile again (Paul A (darkrain))
	* Catalan translation updated (Robert Millan)
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Danish translation updated (Morten Brix Pedersen (mbrix))
	* Finish translation updated (Ambrose C. LI (acli))
	* German translation updated (Bjoern Voigt)
	* Portuguese (Brazilian) translation updated (Mauricio de Lemos
	  Rodrigues Collares Neto)
	* Norwegian translation updated (Petter Johan Olsen)
	* Romanian translation updated (Misu Moldovan (dumol))
	* Serbian translation updated (Danilo Segan)
	* Serbian Latin translation updated (Danilo Segan)
	* Swedish translation updated (Tore Lundqvist (luntor))
