@@ -15,6 +15,7 @@ version 0.69
 	  online accounts as colored.
 	* Fixed the text replacement plugin.
 	* Added SSL support, compatible with GNUTLS and Mozilla NSS.
+	* Added plugin IPC.
 	* Added support for gettext 0.12.x.
 	* The right-click menu for conversation tabs now shows the tab icon
 	  and status, if tab icons are enabled. (Jesse Farmer)
